--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="header" id="header">
     <div class="container">
       <div class="logo">
-        <a href="#home"><span>AK </span>Portfolio</a>
+        <a href="#home"><span>Ankush's  </span>Portfolio</a>
       </div>
       <nav class="nav-menu">
         <ul class="nav-list">
@@ -99,7 +99,7 @@
               When I'm not coding, you can find me exploring new technologies, contributing
               to open-source projects, or enjoying outdoor activities.
             </p>
-            <a href="#" class="btn btn-primary btn-download">Download Resume</a>
+            <a href="ANKSUH RESUME 1 (1).pdf" class="btn btn-primary btn-download">Download Resume</a>
           </div>
           <div class="skills-container">
             <h3>My Skills</h3>
@@ -466,13 +466,13 @@
         <div class="projects-container">
           <div class="project-card" data-category="web app">
             <div class="project-img">
-              <img src="https://via.placeholder.com/600x400" alt="Portfolio Website">
+              <img src="Portfolio Website Landing Page Design (Community).jpg" alt="Portfolio Website">
               <div class="project-overlay">
                 <div class="project-links">
-                  <a href="#" class="project-link" target="_blank" rel="noopener noreferrer">
+                  <a href="https://jocular-dasik-c7834d.netlify.app/" class="project-link" target="_blank" rel="noopener noreferrer">
                     <i class="fas fa-link"></i> Demo
                   </a>
-                  <a href="#" class="project-link" target="_blank" rel="noopener noreferrer">
+                  <a href="https://github.com/ankushkhakale/My-Portfolio-website" class="project-link" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-github"></i> Code
                   </a>
                 </div>
@@ -512,7 +512,7 @@
                 </div>
                 <div class="contact-text">
                   <p>Email</p>
-                  <a href="mailto:example@example.com">example@example.com</a>
+                  <a href="mailto:example@example.com">khakaleankush@gmail.com</a>
                 </div>
               </div>
               <div class="contact-item">
@@ -528,17 +528,17 @@
             <div class="social-links">
               <h3>Connect With Me</h3>
               <div class="social-icons">
-                <a href="https://github.com" target="_blank" rel="noopener noreferrer" class="social-icon">
+                <a href="https://github.com/ankushkhakale" target="_blank" rel="noopener noreferrer" class="social-icon">
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer" class="social-icon">
+                <a href="https://www.linkedin.com/in/ankush-khakale-45423a324/" target="_blank" rel="noopener noreferrer" class="social-icon">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
-                <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" class="social-icon">
+                <a href="https://x.com/Stoic_Ankush" target="_blank" rel="noopener noreferrer" class="social-icon">
                   <i class="fab fa-twitter"></i>
                 </a>
-                <a href="https://dribbble.com" target="_blank" rel="noopener noreferrer" class="social-icon">
-                  <i class="fab fa-dribbble"></i>
+                <a href="https://www.instagram.com/stoic.ankush/" target="_blank" rel="noopener noreferrer" class="social-icon">
+                  <i class="fab fa-instagram"></i>
                 </a>
               </div>
             </div>
