--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
               </div>
               <div class="timeline-item">
                 <div class="timeline-dot"></div>
-                <div class="timeline-date">2021</div>
+                <div class="timeline-date"> Sept 2024</div>
                 <div class="timeline-content">
                   <h4>BTech Computer Engineering</h4>
                   <p>Matoshri College of Engineering</p>
@@ -361,7 +361,7 @@
               </div>
               <div class="timeline-item">
                 <div class="timeline-dot"></div>
-                <div class="timeline-date">2020 - 2022</div>
+                <div class="timeline-date">2022 - 2024</div>
                 <div class="timeline-content">
                   <h4>Video Editor & Photographer</h4>
                   <p>Free Lancer</p>
@@ -370,7 +370,7 @@
               </div>
               <div class="timeline-item">
                 <div class="timeline-dot"></div>
-                <div class="timeline-date">2022 - Present</div>
+                <div class="timeline-date">2024 - Present</div>
                 <div class="timeline-content">
                   <h4>Front-End Developer</h4>
                   <p>Learner(Intermediate Level)</p>
