--- a/index.html
+++ b/index.html
@@ -393,14 +393,14 @@
                 <h4>Hardware Installation</h4>
               </div>
             </div>
-            <div class="flowchart-arrow"></div>
+            <div class="flowchart-arrow vertical"></div>
             <div class="flowchart-node">
               <div class="node-content">
                 <h4>Video Editing & Photography</h4>
                 <p>Lightroom, Aftereffects, Blender</p>
               </div>
             </div>
-            <div class="flowchart-arrow"></div>
+            <div class="flowchart-arrow vertical"></div>
             <div class="flowchart-node highlight-node">
               <div class="node-content">
                 <h4>Web development</h4>
